--- a/backend/src/main/webapp/app/views/dms/customer/search.html
+++ b/backend/src/main/webapp/app/views/dms/customer/search.html
@@ -18,12 +18,12 @@
 		    <input type="text" name="name" class="form-control" placeholder="Name" ng-model="formData.name">
 		  </div>	 
 		  
-		  <div class="form-group input-group input-group-sm">
+		  <!-- <div class="form-group input-group input-group-sm">
 		  	<span class="input-group-addon">Package</span>
 			<select class="form-control" ng-model="formData.package" ng-options="option.id as option.name for option in main.packages" ng-change="search()">
 				<option value="">ทั้งหมด</option>
 			</select>
-		  </div>
+		  </div> -->
 		   
 		  <div class="form-group input-group-sm">
                 <label style="margin-left: 20px;">Status &nbsp;&nbsp;</label>
@@ -63,7 +63,6 @@
 				<th>Created Date</th>
 				<th>Name</th>
 				<th>Code</th>
-				<th>Package</th>
 				<th>Status</th>
 				<th></th>
 			</tr>
@@ -74,7 +73,6 @@
 				<td>{{ u.createdDateTime | date : 'dd/MM/yyyy hh:mm' }}</td>
 				<td>{{ u.name }}</td>
 				<td>{{ u.code }}</td>
-				<td>{{ u.package == 1 ? 'เช่า' : 'ซื้อขาด' }}</td>
 				<td>
 					<i class="fa fa-check-circle fa-lg" ng-show="u.enabled" title="On"></i>
 					<i class="fa  fa-minus-circle fa-lg" ng-hide="u.enabled" title="Off"></i>
