--- a/backend/src/main/webapp/app/views/dms/product/product.html
+++ b/backend/src/main/webapp/app/views/dms/product/product.html
@@ -26,7 +26,7 @@
 			</select>
 		  </div>
 		  
-		  <button type="button" class="btn btn-outline btn-info btn-sm pull-right">ส่ง Invoice</button>
+		  <button type="button" class="btn btn-outline btn-info btn-sm pull-right" ng-click="createInvoice()">ส่ง Invoice</button>
 		  
 		</form>
 	</div>
