--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -255,6 +255,9 @@
 										     	<li><a href="" ng-click="changeTab(51)">เลขโต๊ด</a></li>
 										     </ul>
 									     </li>
+									     
+									     <!-- testing -->
+									     <li ng-class="{'active': tabActived == 7}" ng-click="changeTab(7)"><a href="" data-toggle="tab">เลขเฝ้าดู</a></li>
 					                 </ul>
 									
 									<div class="tab-content">
@@ -347,8 +350,39 @@
 											  		รวม {{ totalPriceSum | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp;
 											  	</span>
 											</div>
-					                     </div>			                     
-					                 </div>           	
+					                     </div>
+					                     
+					                     <div class="tab-pane fade" id="pin" ng-class="{'active in': tabActived == 7}">
+										 	<div style="margin-top: 5px; margin-bottom: 5px; border-radius: 5px; border: .5px solid #ffffffa6; padding: 5px 5px 5px 5px; padding-left: 10px;">
+											    <div class="form-group input-group input-group-sm" style="color: #565353; margin-bottom: 0;">
+													<span class="input-group-addon">เลขเฝ้าดู</span>
+													<tags-input ng-model="pinNum" placeholder="เพิ่มเลข" min-length="2" display-property="pinNum" 
+														on-tag-added="pinManage()" on-tag-removed="pinManage()"></tags-input>
+												</div>
+					                     	</div>
+					                     	
+											<div class="row" style="max-height: 504px; overflow: auto;">
+												<div class="col-md-3" ng-repeat="pin in respPinNums" style="min-height: 252px; 
+													border: 1px dashed #1e6fb5; border-radius: 25px;">
+													<p style="text-align: center;">
+														<span class="badge" style="background-color: #1e6fb5; color: #f6f6f6; font-weight: 500;">
+															{{ pin.title }} {{ pin.type == 2 ? 'บน' : (pin.type == 3 ? 'ล่าง' : '') }}
+														</span>
+													</p>
+													
+													<table class="table" style="margin-bottom: 0;">
+														<tbody>
+															<tr ng-repeat="val in pin.value">
+																<td style="width: 30%">{{ val._id }}</td>
+																<td style="width: 35%">{{ val.totalPrice | number:0 }}.-</td>
+															</tr>
+														</tbody>
+													</table>
+												</div>
+											</div>
+					                     </div>
+					                     			                     
+					                 </div> <!-- End tab-content -->
 				                </div>
 				            </div>	            
 		</div>
