--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -362,8 +362,8 @@
 												
 												
 												<button type="button" class="btn btn-primary" ng-click="wsConn()">Connect to websocket</button>
+												<button type="button" class="btn btn-primary" ng-click="wsSend()">Send message</button>
 												<!-- <button type="button" class="btn btn-primary" ng-click="wsSubscribe()">Subscribe</button> -->
-												<!-- <button type="button" class="btn btn-primary" ng-click="wsSend()">Send message</button> -->
 												
 												
 					                     	</div>
