--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -17,7 +17,7 @@
 
 /* Table header fixed schroll */
 .table-fixed tbody {
-  height: 365px;
+  height: 367px;
   overflow-y: auto;
   width: 100%;
 }
@@ -316,10 +316,13 @@
 											  </table>
 											  
 											<div style="font-weight: 700; ">
-												<div>
+												<div class="pull-left">
 													<span>ยอดซื้อทั้งหมด {{ formData.orderName ? '(' + formData.orderName + ')' : '' }} : </span>
 					  	  							<span>{{ totalPriceSumAll | number:2 }}</span>
-												</div>	
+												</div>
+												<div class="pull-right" ng-hide="isAllOrder">
+													แสดง 10 รายการล่าสุด | <span style="cursor: pointer; color: #e2bb50;" ng-click="showAllOrder()">แสดงทั้งหมด</span>
+												</div>
 											</div>
 					                     </div>
 					                     <div class="tab-pane fade fixedheader" id="profile-pills" 
