--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -177,7 +177,9 @@
 												<span>{{ sumDiscount2 | number:2 }}</span>
 											</td>
 											<td style="text-align: right; background-color: #ccc; color: black;">
-												<span>{{ (sum2 - sumDiscount2) | number:2 }}</span>
+												<span class="badge" style="font-size: 0.98em; background-color: #f0ad4e; color: black;">
+													{{ (sum2 - sumDiscount2) | number:2 }}
+												</span>
 											</td>
 										</tr>
 									</tbody>
