--- a/backend/src/main/webapp/app/views/uploadFile/main.html
+++ b/backend/src/main/webapp/app/views/uploadFile/main.html
@@ -1,9 +1,16 @@
 <style>
-    .my-drop-zone { border: dotted 3px lightgray; }
-    .nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
-    .another-file-over-class { border: dotted 3px green; }
-
-    html, body { height: 100%; }
+    /* html, body { height: 100%; } */
+    .my-drop-zone { 
+    	border: 2px dashed #979595;
+    	margin: 3px -10px 20px -10px;
+    }
+    .nv-file-over { 
+    	border: 2px dashed #e6e029 !important; 
+    }
+	#autocompleteCust .dropdown-menu {
+		max-height: 130px;
+		overflow: auto;
+	}
 </style>
         
 <div>
@@ -11,7 +18,7 @@
 		<div class="col-md-12">
 			<h3 class="page-header">
 				<span class="pull-left">{{ showname }}</span>
-				<i class="fa fa-cloud-upload fa-fw"></i> Upload Files
+				<i class="fa fa-cloud-upload fa-fw"></i> Upload File
 			</h3>
 		</div>
 	</div>
@@ -19,75 +26,65 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="panel gambler-panel">
-                <div class="panel-heading">ข้อมูลผู้รับ</div>
-                <div class="panel-body">
-                
+                <div class="panel-heading">Upload Data</div>
+                <div class="panel-body" style="padding-top: 0; padding-bottom: 0;">
 
-			            <div class="row" nv-file-drop="" uploader="uploader">
-			                <div class="col-md-12" style="margin-bottom: 40px">
-			
-			                    <h3>Upload queue</h3>
-			                    <p>Queue length: {{ uploader.queue.length }}</p>
-			
-			                    <table class="table">
-			                        <thead>
-			                            <tr>
-			                                <th width="50%">Name</th>
-			                                <th ng-show="uploader.isHTML5">Size</th>
-			                                <th ng-show="uploader.isHTML5">Progress</th>
-			                                <th>Status</th>
-			                                <th>Actions</th>
-			                            </tr>
-			                        </thead>
-			                        <tbody>
-			                            <tr ng-repeat="item in uploader.queue">
-			                                <td><strong>{{ item.file.name }}</strong></td>
-			                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-			                                <td ng-show="uploader.isHTML5">
-			                                    <div class="progress" style="margin-bottom: 0;">
-			                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
-			                                    </div>
-			                                </td>
-			                                <td class="text-center">
-			                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-			                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-			                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-			                                </td>
-			                                <td nowrap>
-			                                    <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
-			                                        <span class="glyphicon glyphicon-upload"></span> Upload
-			                                    </button>
-			                                    <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
-			                                        <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-			                                    </button>
-			                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
-			                                        <span class="glyphicon glyphicon-trash"></span> Remove
-			                                    </button>
-			                                </td>
-			                            </tr>
-			                        </tbody>
-			                    </table>
-			
-			                    <div>
-			                        <div>
-			                            Queue progress:
-			                            <div class="progress" style="">
-			                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
-			                            </div>
-			                        </div>
-			                        <button type="button" class="btn btn-success btn-sm" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
-			                            <span class="glyphicon glyphicon-upload"></span> Upload all
-			                        </button>
-			                        <button type="button" class="btn btn-warning btn-sm" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
-			                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-			                        </button>
-			                        <button type="button" class="btn btn-danger btn-sm" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
-			                            <span class="glyphicon glyphicon-trash"></span> Remove all
-			                        </button>
-			                    </div>
-			
-			                </div>
-			            </div>
+		            <div class="row my-drop-zone" nv-file-drop="" uploader="uploader" nv-file-over uploader="uploader" over-class="nv-file-over">
+		                <div class="col-md-12" style="margin-bottom: 20px">
+		
+		                    <h3>Upload queue : {{ periodObj.periodDateTime | date:'dd/MM/yyyy' }}</h3>
+		                    <p>Queue length: {{ uploader.queue.length }}</p>
+		
+		                    <table class="table">
+		                        <thead>
+		                            <tr>
+		                                <th width="50%">Name</th>
+		                                <th ng-show="uploader.isHTML5">Size</th>
+		                                <th ng-show="uploader.isHTML5">Progress</th>
+		                                <th>Status</th>
+		                                <th>Actions</th>
+		                            </tr>
+		                        </thead>
+		                        <tbody>
+		                            <tr ng-repeat="item in uploader.queue">
+		                                <td><strong>{{ item.file.name }}</strong></td>
+		                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+		                                <td ng-show="uploader.isHTML5">
+		                                    <div class="progress" style="margin-bottom: 0;">
+		                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+		                                    </div>
+		                                </td>
+		                                <td class="text-center">
+		                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+		                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+		                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+		                                </td>
+		                                <td nowrap>
+		                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+		                                        <span class="glyphicon glyphicon-trash"></span> Remove
+		                                    </button>
+		                                </td>
+		                            </tr>
+		                        </tbody>
+		                    </table>
+		
+		                    <div>
+		                        <div>
+		                            Queue progress:
+		                            <div class="progress" style="">
+		                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+		                            </div>
+		                        </div>
+		                        <button type="button" class="btn btn-success btn-sm" ng-click="uploadFile()" ng-disabled="!uploader.getNotUploadedItems().length">
+		                            <span class="glyphicon glyphicon-upload"></span> Upload all
+		                        </button>
+		                        <button type="button" class="btn btn-danger btn-sm" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+		                            <span class="glyphicon glyphicon-trash"></span> Remove all
+		                        </button>
+		                    </div>
+		
+		                </div>
+		            </div>
 			
 			
                 
@@ -104,6 +101,33 @@
                 
                 
                 
+                <div class="panel panel-info" style="margin: 0; border-color: #2C2B2B; background-color: #6e6c6c;">
+					<div class="panel-heading" style="background-color: #525151; border-color: #2C2B2B; color: #cccccc;">
+						<form class="form-inline" ng-submit="search()">
+						  <div class="form-group input-group input-group-sm">
+						    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+						    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name">
+						  </div>
+						</form>
+					</div>
+					
+					<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px; background-color: #525151; border-color: #525151; color: #cccccc;">
+						<span class="input-group-addon" style="border: 0px; background: none; color: #cccccc;">
+							{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
+						</span>
+						<pagination ng-change="pageChanged()" total-items="totalItems"
+									first-text="{{'pagination.first' | translate}}"
+									previous-text="{{'pagination.previous' | translate}}"
+									next-text="{{'pagination.next' | translate}}"
+									last-text="{{'pagination.last' | translate}}"
+									ng-model="$parent.formData.currentPage" items-per-page="itemsPerPage"
+									max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+									rotate="false" num-pages="numPages" style="margin: auto;" />
+						<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #cccccc;">
+							<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+						</span>
+					</div>
+				</div>
                 
                 
                 
@@ -115,20 +139,21 @@
                 
                 
                 
-                
-            		<!-- <table class="table table-hover gambler-panel" id="tbSortable">
+            		<table class="table table-hover gambler-panel">
 					    <thead>
 							<tr>
 								<th>#</th>
-								<th>วันที่สร้าง</th>
+								<th>เวลา</th>
 								<th>ชื่อ</th>
-								<th></th>
+								<th>ชื่อไฟล์</th>
+								<th>action</th>
 							</tr>
 					    </thead>
 						<tbody>
 					     	<tr ng-repeat="lst in receiver.list" ng-click="receiver.addEditReceiver(2, lst)">
 								<td id="{{ lst.id }}">{{ $index + 1 }}</td>
 								<td>{{ lst.createdDateTime | date:'dd/MM/yyyy HH:mm:ss' }}</td>
+								<td>{{ lst.receiverName }}</td>
 								<td>{{ lst.receiverName }}</td>
 								<td ng-click="preventOuterEvent($event)">
 									<i class="fa fa-lg fa-fw" ng-class="{'fa-hand-rock-o off': lst.isCuttingOff, 'fa-hand-paper-o on': !lst.isCuttingOff}" style="cursor: pointer;" ng-click="cutOffToggle(lst)"></i>
@@ -138,7 +163,11 @@
 							</tr>
 					    </tbody>
 					</table>
-					<button type="button" class="btn btn-info btn-circle pull-right" ng-click="receiver.addEditReceiver(1)"><i class="fa fa-plus"></i></button> -->
+	 
+					
+					
+					
+					
 					
 					
 					
