--- a/backend/src/main/webapp/app/views/lottoResult/main.html
+++ b/backend/src/main/webapp/app/views/lottoResult/main.html
@@ -60,6 +60,8 @@ thead > tr > th, tbody > tr > td {
 									<th><span class="badge win-price-sum">{{ pair5Sum | number:2 }}</span></th>
 									<th><span class="badge win-price-sum">{{ runBonSum | number:2 }}</span></th>
 									<th><span class="badge win-price-sum">{{ runLangSum | number:2 }}</span></th>
+									<th><span class="badge win-price-sum">{{ pugBonSum | number:2 }}</span></th>
+									<th><span class="badge win-price-sum">{{ pugLangSum | number:2 }}</span></th>
 						    	</tr>
 								<tr>
 									<th>#</th>
@@ -73,6 +75,8 @@ thead > tr > th, tbody > tr > td {
 									<th>แพ 5</th>
 									<th>วิ่งบน</th>
 									<th>วิ่งล่าง</th>
+									<th>ปักบน</th>
+									<th>ปักล่าง</th>
 								</tr>
 						    </thead>
 							<tbody>
@@ -90,6 +94,8 @@ thead > tr > th, tbody > tr > td {
 									<td><span class="badge win-price">{{ res.pair5_price | number:0 }}</span></td>
 									<td><span class="badge win-price">{{ res.runBon_price | number:0 }}</span></td>
 									<td><span class="badge win-price">{{ res.runLang_price | number:0 }}</span></td>
+									<td><span class="badge win-price">{{ res.resultPugBon_price | number:0 }}</span></td>
+									<td><span class="badge win-price">{{ res.resultPugLang_price | number:0 }}</span></td>
 								</tr>
 						    </tbody>
 						</table>
