--- a/backend/src/main/webapp/app/views/priceList/main.html
+++ b/backend/src/main/webapp/app/views/priceList/main.html
@@ -130,6 +130,21 @@
 										</div>
 									</div>
 		                		</div>
+		                		
+		                		<div class="col-md-12">
+									<div class="form-group">
+									    <label>{{ priceList.label[priceList.fieldIndex].group5 }}</label>
+										<div class="input-group input-group-sm">
+										  <input type="text" tabindex="2" class="form-control" 
+									   	  ng-model="priceList.sale[priceList.fieldIndex].fieldPugBon">
+										  <span class="input-group-addon" id="sizing-addon3">/</span>
+										  <input type="text" tabindex="2" class="form-control" 
+									   	  ng-model="priceList.sale[priceList.fieldIndex].fieldPugLang">
+										</div>
+									</div>
+		                		</div>
+		                		
+		                		
 	                		</div>
                 		</fieldset>
                 		
